# cognito

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: render_homebrew_formula.py  transfer-project.sh
src/cognito/: __init__.py  __main__.py  cli.py  config.py  constants.py  engine.py  fs.py  models.py  text.py
tests/: test_cli.py  test_config.py  test_engine.py  test_fs.py  test_models.py  test_text.py
