[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cognito"
dynamic = ["version"]
description = "CLI tool for anonymizing and restoring project-specific paths and words."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
  { name = "romus" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
cognito = "cognito.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "cognito.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
